# empire-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  setup_rust.sh
.cargo/: audit.toml
.github/workflows/: ci.yml
docs/architecture/: overview.md
src/: main.rs
src/cli/: mod.rs
src/client/: mod.rs
src/core/: mod.rs
src/core/agent/: mod.rs
src/core/command/: mod.rs
src/core/error/: mod.rs
src/core/message/: mod.rs
src/core/task/: mod.rs
src/server/: mod.rs
tests/: helpers.rs  lib.rs
tests/integration/: server_client.rs
tests/unit/: core.rs
