[package]
name = "empire-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A post-exploitation framework written in Rust"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
hyper = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"
tokio-util = { version = "0.7", features = ["codec"] }
async-stream = "0.3"
futures-util = "0.3"
colored = "2.1" 