# Empire-Rust - A post-exploitation framework written in Rust
#
# This file defines the project's metadata, dependencies, and build configuration.

[package]
# Package name
name = "empire-rust"
# Package version (following semantic versioning)
version = "0.1.0"
# Package edition (using Rust 2021)
edition = "2021"
# Package description
description = "A post-exploitation framework written in Rust"
# Package authors
authors = ["Your Name <your.email@example.com>"]
# Package license
license = "MIT"
# Package repository
repository = "https://github.com/yourusername/empire-rust"
# Package documentation
documentation = "https://docs.rs/empire-rust"

# Dependencies required for the project
[dependencies]
# Async runtime and networking
tokio = { version = "1.36", features = ["full"] }
# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
# HTTP client and server
hyper = { version = "1.0", features = ["full"] }
# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }
# Command-line argument parsing
clap = { version = "4.4", features = ["derive"] }
# Logging
log = "0.4"
# Colored terminal output
colored = "2.1"
# Error handling
anyhow = "1.0"
# Serialization format
bincode = "1.3"
# Async utilities
tokio-util = { version = "0.7", features = ["codec"] }
# Async streams
async-stream = "0.3"
# Futures utilities
futures-util = "0.3"
# Tracing for logging and debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# Development dependencies
[dev-dependencies]
# Testing framework
tokio-test = "0.4"
# Assertion macros
assert_test = "0.1" 